fixed issue with section being displayed from regular nav while being on mobile sizes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 /* header and nav layout */
 .header-wrapper {
-  background-color:rgba(0 0 0 );
+  background-color: rgba(0 0 0);
   width: 100%;
   z-index: 2;
   position: fixed;
@@ -10,8 +10,7 @@ header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
+    'hamburger brand tools' var(--nav-height) 'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
   gap: 0 2em;
   margin: auto;
@@ -23,8 +22,7 @@ header nav {
 
 header nav[aria-expanded="true"] {
   grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
+    'hamburger brand' var(--nav-height) 'sections sections' 1fr
     'tools tools' var(--nav-height) / auto 1fr;
   overflow-y: auto;
   min-height: 100vh;
@@ -154,20 +152,19 @@ header nav .nav-brand img {
 
 /* sections */
 @media (max-width: 900px) {
- header nav .nav-sections {
-  grid-area: sections;
-  flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
-  background-color: var(--overlay-color);
-}
+  header nav .nav-sections {
+    grid-area: sections;
+    flex: 1 1 auto;
+    display: none;
+    visibility: hidden;
+    background-color: var(--overlay-color);
+  }
 }
 
 header nav[aria-expanded="true"] .nav-sections {
   display: flex;
   justify-content: flex-end;
   gap: 30px;
-  visibility: visible;
   align-self: start;
 }
 
@@ -181,30 +178,22 @@ header nav .mobile-nav li {
   padding-top: var(--spacing-xm);
 }
 
-header nav[aria-expanded="true"] .nav-sections {
-  display: flex;
-  justify-content: flex-end;
-  gap: 30px;
-  visibility: visible;
-  align-self: start;
-}
-
-header nav .nav-sections ul  {
+header nav .nav-sections ul {
   list-style: none;
   padding-left: 0;
   font-size: var(--body-font-size-s);
   font-weight: 500;
 }
 
-header nav .nav-sections ul > li {
+header nav .nav-sections ul>li {
   font-weight: 700;
 }
 
-header nav .nav-sections ul > li > ul {
+header nav .nav-sections ul>li>ul {
   margin-top: 0;
 }
 
-header nav .nav-sections ul > li > ul > li {
+header nav .nav-sections ul>li>ul>li {
   font-weight: 500;
 }
 
@@ -212,81 +201,81 @@ header nav[aria-expanded="true"] .nav-sections {
   align-self: unset;
 }
 
-  header nav[aria-expanded="true"] .nav-sections {
-    align-self: unset;
-  }
+header nav[aria-expanded="true"] .nav-sections {
+  align-self: unset;
+}
 
-  header nav .nav-sections .nav-drop {
-    position: relative;
-    padding-right: 16px;
-    cursor: pointer;
-  }
 
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: .5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
-  }
+header nav .nav-sections .nav-drop {
+  position: relative;
+  padding-right: 16px;
+  cursor: pointer;
+}
 
-  header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
-    top: unset;
-    bottom: .5em;
-    transform: rotate(315deg);
-  }
+header nav .nav-sections .nav-drop::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: .5em;
+  right: 2px;
+  transform: rotate(135deg);
+  width: 6px;
+  height: 6px;
+  border: 2px solid currentcolor;
+  border-radius: 0 1px 0 0;
+  border-width: 2px 2px 0 0;
+}
 
-  header nav .nav-sections ul {
-    display: flex;
-    gap: 2em;
-    margin: 0;
-    font-size: var(--body-font-size-xs);
-    justify-content: flex-end;
-  }
+header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
+  top: unset;
+  bottom: .5em;
+  transform: rotate(315deg);
+}
 
-  header nav .nav-sections > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 500;
-  }
+header nav .nav-sections ul {
+  display: flex;
+  gap: 2em;
+  margin: 0;
+  font-size: var(--body-font-size-xs);
+  justify-content: flex-end;
+}
 
-  header nav .nav-sections > ul > li > ul {
-    display: none;
-    position: relative;
-  }
+header nav .nav-sections>ul>li {
+  flex: 0 1 auto;
+  position: relative;
+  font-weight: 500;
+}
 
-  header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
-    display: block;
-    position: absolute;
-    left: -1em;
-    width: 200px;
-    margin-top: 12px;
-    padding: 1em;
-    background-color: var(--highlight-background-color);
-    white-space: initial;
-  }
+header nav .nav-sections>ul>li>ul {
+  display: none;
+  position: relative;
+}
 
-  header nav .nav-sections > ul > li > ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--highlight-background-color);
-  }
+header nav .nav-sections>ul>li[aria-expanded="true"]>ul {
+  display: block;
+  position: absolute;
+  left: -1em;
+  width: 200px;
+  margin-top: 12px;
+  padding: 1em;
+  background-color: var(--highlight-background-color);
+  white-space: initial;
+}
 
-  header nav .nav-sections > ul > li > ul > li {
-    padding: 8px 0;
-  }
+header nav .nav-sections>ul>li>ul::before {
+  content: '';
+  position: absolute;
+  top: -8px;
+  left: 8px;
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid var(--highlight-background-color);
+}
+
+header nav .nav-sections>ul>li>ul>li {
+  padding: 8px 0;
 }
 
 /* tools */
@@ -304,6 +293,7 @@ header nav .mobile-nav-overlay {
   width: 100vw;
   height: 100vh;
 }
+
 header nav .mobile-nav {
   background-color: black;
   width: 50%;
@@ -321,7 +311,7 @@ header nav .mobile-nav-top {
   height: 100%;
 }
 
-header nav .mobile-nav > div:nth-child(2) > div {
+header nav .mobile-nav>div:nth-child(2)>div {
   margin-top: 24px;
   display: flex;
   flex-direction: column;
@@ -333,19 +323,19 @@ header nav .mobile-nav p {
   font-size: 14px;
 }
 
-header nav .mobile-nav > div:nth-child(2) p {
+header nav .mobile-nav>div:nth-child(2) p {
   margin-top: 0;
 }
 
-header nav .mobile-nav > div:nth-child(2) > div p {
+header nav .mobile-nav>div:nth-child(2)>div p {
   width: 100%;
 }
 
-header nav .mobile-nav > div:last-child > div {
+header nav .mobile-nav>div:last-child>div {
   position: relative;
 }
 
-header nav .mobile-nav > div:nth-child(2) > div p:last-child {
+header nav .mobile-nav>div:nth-child(2)>div p:last-child {
   width: auto;
   margin-top: 8px;
   font-size: var(--body-font-size-xxs);
@@ -356,7 +346,7 @@ header nav .mobile-nav a {
   font-size: var(--font-size-medium);
 }
 
-header nav .mobile-nav > div:nth-child(2) a {
+header nav .mobile-nav>div:nth-child(2) a {
   display: block;
   width: 100%;
   border: 1px solid var(--link-highlight-color);
@@ -374,11 +364,11 @@ header nav .mobile-nav > div:nth-child(2) a {
 }
 
 
-header nav .mobile-nav > div:nth-child(2) p:nth-child(odd) a {
+header nav .mobile-nav>div:nth-child(2) p:nth-child(odd) a {
   color: var(--link-highlight-color);
 }
 
-header nav .mobile-nav > div:nth-child(2) p:nth-child(even) a {
+header nav .mobile-nav>div:nth-child(2) p:nth-child(even) a {
   background-clip: padding-box;
   background-color: var(--link-highlight-color);
   color: var(--background-color)
